--- a/bower.json
+++ b/bower.json
@@ -1,17 +1,15 @@
 {
-  "name": "angular-phonecat",
-  "description": "A starter project for AngularJS",
-  "version": "0.0.0",
-  "homepage": "https://github.com/angular/angular-phonecat",
-  "license": "MIT",
-  "private": true,
-  "dependencies": {
-    "angular": "1.5.x",
-    "angular-animate": "1.5.x",
-    "angular-mocks": "1.5.x",
-    "angular-resource": "1.5.x",
-    "angular-route": "1.5.x",
-    "bootstrap": "3.3.x",
-    "jquery": "2.2.x"
-  }
+"name": "angular-phonecat",
+"description": "A starter project for AngularJS",
+"version": "0.0.0",
+"homepage": "https://github.com/angular/angular-phonecat",
+"license": "MIT",
+"private": true,
+"dependencies": {
+  "angular": "1.5.x",
+  "angular-mocks": "~1.5.x",
+  "jquery": "1.10.x",
+  "bootstrap": "~3.3.1",
+  "angular-route": "~1.5.x"
+}
 }
